--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="flex flex-col lg:flex-row items-center gap-12">
                 <div class="flex-1 text-center lg:text-left">
                     <h1 class="text-4xl md:text-6xl mb-6 bg-gradient-to-r from-blue-400 to-purple-400 bg-clip-text text-transparent">
-                        Joki Game Profesional
+                        Joki Game Profesional mantul
                     </h1>
                     <p class="text-xl md:text-2xl mb-8 text-gray-300">
                         Naik rank dengan mudah, cepat, dan aman bersama pro player terpercaya
