--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section id="home" class="relative bg-gradient-to-br from-purple-900 via-blue-900 to-indigo-900 text-white py-20 pt-32">
+    <section id="home">
         <div class="absolute inset-0 bg-black/30"></div>
         <div class="container mx-auto px-4 relative z-10">
             <div class="flex flex-col lg:flex-row items-center gap-12">
